--- a/package.json
+++ b/package.json
@@ -15,5 +15,19 @@
   "bugs": {
     "url": "https://github.com/tomruttle/app-manager/issues"
   },
-  "homepage": "https://github.com/tomruttle/app-manager#readme"
+  "homepage": "https://github.com/tomruttle/app-manager#readme",
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^4.10.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-import-resolver-webpack": "^0.8.3",
+    "eslint-plugin-flowtype": "^2.39.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-mocha": "^4.11.0",
+    "webpack": "^3.8.1"
+  }
 }
