--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "description": "Script for managing the lifecycles of multiple apps on a single page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack",
+    "build-prod": "webpack --env=prod -p",
+    "watch": "webpack --watch",
+    "lint": "eslint --ext .js .",
+    "test": "mocha ./test/**/*.js",
+    "coverage": "nyc mocha ./test/**/*.js",
+    "typecheck": "flow check",
+    "precommit": "npm run lint",
+    "prepush": "npm test"
   },
   "repository": {
     "type": "git",
@@ -16,7 +24,23 @@
     "url": "https://github.com/tomruttle/app-manager/issues"
   },
   "homepage": "https://github.com/tomruttle/app-manager#readme",
+  "nyc": {
+    "all": true,
+    "check-coverage": true,
+    "lines": 70,
+    "statements": 70,
+    "functions": 70,
+    "branches": 70,
+    "include": [
+      "lib/**"
+    ],
+    "reporter": [
+      "cobertura",
+      "html"
+    ]
+  },
   "devDependencies": {
+    "babel-core": "^6.26.0",
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -28,6 +52,12 @@
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-mocha": "^4.11.0",
+    "flow-bin": "^0.58.0",
+    "nyc": "^11.3.0",
     "webpack": "^3.8.1"
+  },
+  "dependencies": {
+    "html5-history": "^0.1.5",
+    "path-to-regexp": "^2.1.0"
   }
 }
