--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-prod": "webpack --env=prod -p",
     "watch": "webpack --watch",
     "lint": "eslint --ext .js .",
-    "test": "mocha ./test/**/*.js",
+    "test": "mocha ./test/*.test.js",
     "coverage": "nyc mocha ./test/**/*.js",
     "typecheck": "flow check",
     "precommit": "npm run lint",
@@ -46,14 +46,20 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "env-test": "^1.0.0",
     "eslint": "^4.10.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-mocha": "^4.11.0",
+    "event-emitter": "^0.3.5",
     "flow-bin": "^0.58.0",
+    "mocha": "^4.0.1",
     "nyc": "^11.3.0",
+    "sinon": "^4.0.2",
     "webpack": "^3.8.1"
   },
   "dependencies": {
