--- a/examples/simple-react/package.json
+++ b/examples/simple-react/package.json
@@ -14,5 +14,10 @@
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4"
+  },
+  "dependencies": {
+    "html5-history": "^0.1.5",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
