--- a/.babelrc
+++ b/.babelrc
@@ -13,7 +13,7 @@
       "presets": [
         ["env", { "loose": true, "modules": false, "targets": { "browsers": ["last 2 versions", "ie 9", "ie 10"] } }],
       ],
-      "plugins": ["transform-class-properties"],
+      "plugins": ["transform-class-properties", "transform-runtime"],
     }
   }
 }
