--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-manager",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "Script for managing the lifecycles of multiple apps on a single page",
   "main": "es5/index.js",
   "scripts": {
@@ -45,6 +45,8 @@
     "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.26.0",
@@ -65,7 +67,6 @@
     "webpack": "^3.8.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "html5-history": "^0.1.5",
     "path-to-regexp": "^2.1.0"
   }
