--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,7 @@
     },
     "development": {
       "presets": [
-        ["env", { "loose": true, "modules": false, "targets": { "browsers": ["last 2 versions", "ie 9", "ie 10"] } }],
+        ["env", { "targets": { "browsers": ["last 2 versions", "ie 9", "ie 10"] } }],
       ],
       "plugins": ["transform-class-properties", "transform-runtime"],
     }
