--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,19 @@
 language: node_js
 install: npm i
 script: npm run coverage && npm run compile
-jobs:
-  include:
-    - stage: GitHub Release
-      script: skip
-      deploy:
-        provider: releases
-        api_key: $GITHUB_TOKEN
-        skip_cleanup: true
-        on:
-          tags: true
-          repo: tomruttle/app-manager
-          all_branches: true
-    - stage: NPM Release
-      script: skip
-      deploy:
-        provider: npm
-        email: tom@tomruttle.com
-        api_key: $NPM_TOKEN
-        skip_cleanup: true
-        on:
-          tags: true
-          repo: tomruttle/app-manager
-          all_branches: true
+deploy:
+  - provider: releases
+    api_key: $GITHUB_TOKEN
+    skip_cleanup: true
+    on:
+      tags: true
+      repo: tomruttle/app-manager
+      all_branches: true
+  - provider: npm
+    email: tom@tomruttle.com
+    api_key: $NPM_TOKEN
+    skip_cleanup: true
+    on:
+      tags: true
+      repo: tomruttle/app-manager
+      all_branches: true
