--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-manager",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "Script for managing the lifecycles of multiple apps on a single page",
   "main": "es5/index.js",
   "scripts": {
@@ -15,6 +15,10 @@
     "precommit": "npm run lint",
     "prepush": "npm run coverage"
   },
+  "files": [
+    "es5",
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tomruttle/app-manager.git"
@@ -58,7 +62,7 @@
     "eslint-plugin-flowtype": "^2.39.1",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-mocha": "^4.11.0",
-    "flow-bin": "^0.58.0",
+    "flow-bin": "^0.59.0",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
