build types on ci

--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "Script for managing the lifecycles of multiple apps on a single page",
   "main": "es5/index.js",
   "scripts": {
+    "coverage": "nyc mocha ./test/*.test.js",
+    "clean": "rimraf ./es5",
     "compile": "babel lib -d es5",
+    "copy": "flow-copy-source -v lib es5",
+    "ci": "npm run coverage && npm run clean && npm run compile && npm run copy",
     "watch": "babel lib -d es5 --watch",
     "build": "webpack",
     "build-prod": "webpack --env=prod -p",
     "lint": "eslint --ext .js .",
     "test": "mocha ./test/*.test.js",
-    "coverage": "nyc mocha ./test/*.test.js",
     "typecheck": "flow check",
     "precommit": "npm run lint",
     "prepush": "npm run coverage"
@@ -63,9 +66,11 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-mocha": "^4.11.0",
     "flow-bin": "^0.59.0",
+    "flow-copy-source": "^1.2.1",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
     "nyc": "^11.3.0",
+    "rimraf": "^2.6.2",
     "sinon": "^4.0.2",
     "webpack": "^3.8.1"
   },
