--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 install: npm i
-script: npm run coverage && npm run compile
+script: npm run ci
 deploy:
   - provider: releases
     api_key: $GITHUB_TOKEN
