--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "app-manager",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "Script for managing the lifecycles of multiple apps on a single page",
   "main": "es5/index.js",
   "scripts": {
     "coverage": "nyc mocha ./test/*.test.js",
-    "clean": "rimraf ./es5",
+    "clean": "rimraf ./es5 ./dist",
     "compile": "babel lib -d es5",
     "copy": "flow-copy-source -v lib es5",
-    "build": "npm run clean && npm run compile && npm run copy",
-    "ci": "npm run coverage && npm run build",
+    "build": "npm run compile && npm run copy",
+    "bundle": "webpack",
+    "bundle-prod": "webpack --env=prod -p",
+    "ci": "npm run coverage && npm run clean && npm run build && npm run bundle-prod",
     "watch": "babel lib -d es5 --watch",
-    "build": "webpack",
-    "build-prod": "webpack --env=prod -p",
     "lint": "eslint --ext .js .",
     "test": "mocha ./test/*.test.js",
     "typecheck": "flow check",
