--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
   "dependencies": {
     "eventemitter3": "^3.0.0",
     "path-to-regexp": "^2.1.0",
-    "slot-finder": "0.0.2"
+    "slot-finder": "0.0.2",
+    "url-parse": "^1.2.0"
   }
 }
