--- a/examples/simple-react/package.json
+++ b/examples/simple-react/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^2.11.1"
   },
   "dependencies": {
+    "app-manager": "^0.16.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   }
