--- a/examples/simple-react/package.json
+++ b/examples/simple-react/package.json
@@ -21,6 +21,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.6.1",
+    "flow-bin": "^0.64.0",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.11.1"
