--- a/examples/simple-react/package.json
+++ b/examples/simple-react/package.json
@@ -31,6 +31,7 @@
     "app-manager": "^0.16.5",
     "eventemitter3": "^3.0.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "styled-components": "^3.1.4"
   }
 }
