--- a/examples/simple-react/package.json
+++ b/examples/simple-react/package.json
@@ -32,6 +32,7 @@
     "eventemitter3": "^3.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "shortid": "^2.2.8",
     "styled-components": "^3.1.4"
   }
 }
