--- a/examples/microservices/main/package.json
+++ b/examples/microservices/main/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "app-manager": "^0.16.5",
     "eventemitter3": "^3.0.0",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "superagent": "^3.8.2"
   }
 }
