--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-manager",
-  "version": "0.19.3",
+  "version": "0.19.4",
   "description": "Script for managing the lifecycles of multiple apps on a single page",
   "main": "es5/index.js",
   "scripts": {
@@ -35,10 +35,10 @@
   "homepage": "https://github.com/tomruttle/app-manager#readme",
   "nyc": {
     "check-coverage": true,
-    "lines": 70,
-    "statements": 70,
+    "lines": 80,
+    "statements": 80,
     "functions": 100,
-    "branches": 64,
+    "branches": 70,
     "include": [
       "lib/**"
     ],
@@ -59,6 +59,7 @@
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "env-test": "^1.0.0",
     "eslint": "^4.16.0",
     "eslint-config-airbnb-base": "^12.1.0",
