--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,5 @@
     ["env", { "targets": { "browsers": ["last 2 versions", "ie 11"] } }],
     "flow",
   ],
-  "plugins": ["transform-class-properties", "transform-runtime"]
+  "plugins": ["transform-class-properties", "transform-runtime", ["transform-builtin-extend", { "globals": ["Error"] }]]
 }
