--- a/examples/microservices/main/package.json
+++ b/examples/microservices/main/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "app-manager-examples-microservices",
+  "name": "app-manager-examples-microservices-main",
   "version": "0.0.1",
-  "description": "A simple react example for app-manager",
+  "description": "",
   "main": "src/server/index.js",
   "scripts": {
     "start": "babel-node src/server/index.js",
