--- a/package.json
+++ b/package.json
@@ -74,7 +74,8 @@
     "nyc": "^11.7.3",
     "rimraf": "^2.6.2",
     "sinon": "^5.0.7",
-    "webpack": "^4.8.3"
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.3"
   },
   "dependencies": {
     "slot-finder": "0.0.3"
