--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "compile": "babel lib -d es5",
     "copy": "cp ./lib/index.js.flow ./es5",
     "build": "npm run compile && npm run copy",
-    "bundle": "webpack",
-    "bundle-prod": "webpack --env=prod -p",
+    "bundle": "webpack --mode=development",
+    "bundle-prod": "webpack --mode=production",
     "ci": "npm run coverage && npm run clean && npm run build && npm run bundle-prod",
     "watch": "babel lib -d es5 --watch",
     "lint": "eslint --ext .js .",
