--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,5 @@
     ["env", { "targets": { "browsers": [">0.25%", "not ie 11", "not op_mini all"] } }],
     "flow",
   ],
-  "plugins": ["transform-async-generator-functions", "transform-class-properties", "transform-runtime", ["transform-builtin-extend", { "globals": ["Error"] }]]
+  "plugins": ["transform-object-rest-spread", "transform-async-generator-functions", "transform-class-properties", "transform-runtime", ["transform-builtin-extend", { "globals": ["Error"] }]]
 }
