--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-manager",
-  "version": "0.24.5",
+  "version": "0.24.6",
   "description": "Script for managing the lifecycles of multiple apps on a single page",
   "main": "index.js",
   "scripts": {
@@ -79,7 +79,5 @@
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   },
-  "dependencies": {
-    "slot-finder": "0.0.3"
-  }
+  "dependencies": {}
 }
