--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "eslint-plugin-flowtype": "^2.46.3",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-mocha": "^5.0.0",
+    "eventemitter3": "^3.1.0",
     "flow-bin": "^0.72.0",
     "husky": "^0.14.3",
     "mocha": "^5.1.1",
@@ -77,7 +78,8 @@
     "rimraf": "^2.6.2",
     "sinon": "^5.0.7",
     "webpack": "^4.8.3",
-    "webpack-cli": "^2.1.3"
+    "webpack-cli": "^2.1.3",
+    "window-stub": "0.0.1"
   },
   "dependencies": {}
 }
