--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,11 @@
 [ignore]
 <PROJECT_ROOT>/examples
 
+[lints]
+all=warn
+untyped-type-import=error
+sketchy-null-bool=off
+
 [options]
 suppress_comment=\\(.\\|\n\\)*\\$ExpectError
 suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe
